# LangGraph-Chatbot

./: .env.example  .gitignore  LICENSE  MIGRATION.md  QUICK_REFERENCE.md  README.md  all_tools.py  campusx_backend.py  chatbot.db  chatbot.db-shm  chatbot.db-wal  database_backend.py  frontend_with_database.py  learning_to_code_in_python_a_beginners_roadmap_to_your_first_project.md  main.py  package-lock.json  package.json  pyproject.toml  rag_backend.py  requirements.txt  start.bat  start.sh  test.py  test_db_connection.py  thread_id_name.py  tools.py
app/: __init__.py
app/database/: __init__.py  mysql_checkpoint.py
app/router/: __init__.py  chat.py  database_backend.py  health.py
app/schema/: __init__.py  models.py
app/services/: chat.py  chat_service.py  chatbot.py  chatbot_service.py  rag.py  rag_service.py  thread_service.py
app/storage/documents/: 0030c1eb-a605-4d65-a345-1c36d7912446.json  0d5062c6-4665-45fc-b1de-283bd2e9f943.json  6d536b0a-d808-4e9b-b9bf-2b004c697634.json  a8de5208-b225-437a-9c8b-946c40de9983.json  null.json
app/tools/: all_tools.py  search.py  weather.py
app/tools/blogs/: llm.py  research.py  worker.py
backend/: .env.example  main.py  requirements.txt
backend/app/: __init__.py
backend/app/database/: __init__.py  config.py  init_db.py  models.py  mysql_checkpoint.py
backend/app/router/: auth.py  chat.py  health.py
database/: README.md  config.py  mysql_checkpoint.py
frontend/: FEATURES.md  README.md  components.json  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+35 files in other folders)
